# Stockpredictor_with_ml

./: .cursorignore  .environment.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  pyproject.toml  sp500_tickers.json
.github/workflows/: bandit.yml
docs/: DOCUMENTATION_STRUCTURE.md  README.md
docs/01-project-overview/: README.md  business_overview.md
docs/02-installation-setup/: INSTALL.md  README.md
docs/03-data-collection/: README.md  concurrent_dividend_processing.md
docs/03-data-collection/polygon/: polygon_news_collector.md  polygon_stock_data_collector.md
docs/04-feature-engineering/: FEATURE_AND_TARGET_ENGINEERING.md  README.md  SECTOR_ANALYSIS_IMPLEMENTATION.md
docs/04-feature-engineering/fundamental/: FEATURE_ENGINEERING_IMPLEMENTATION_PLAN.md  FUNDAMENTAL_DATA_COLLECTION_PLAN.md  FUNDAMENTAL_DATA_COLLECTION_V2_PLAN.md  FUNDAMENTAL_FEATURES_IMPLEMENTATION_PLAN.md  FUNDAMENTAL_PIPELINE_README.md  SECTOR_ANALYSIS_IMPLEMENTATION.md
docs/05-model-training/: ADVANCED_MODEL_IMPLEMENTATION_PLAN.md  LIGHTGBM_MODEL_SUMMARY.md  REALMLP_BEST_PRACTICES.md  THRESHOLD_OPTIMIZATION.md  Xgboost_model_documentation.md
docs/06-configuration/: CONFIGURATION_SUMMARY.md  base_rules.md
docs/07-implementation-guides/: project_technical_implementation_summary.md
docs/08-technical-reference/: technical_task_list.md
docs/08-technical-reference/tests/: TESTING_CHECKLIST.md  TESTING_OVERVIEW.md  TEST_FIXTURES.md  TEST_NAMING_AND_MARKERS.md  TEST_TEMPLATES.md
sql/: database.sql  database_schema.sql  dividents.sql  fundamental_data_schema.sql  fundamentals_v2_schema.sql
src/: __init__.py  main_pipeline_runner.py
src/data_collector/: __init__.py  config.py  ticker_manager.py
src/data_collector/indicator_pipeline/: __init__.py  base.py  consolidate_features.py  consolidated_storage.py  dividend_features.py  feature_calculator.py  feature_storage.py  indicator_pipeline.py  momentum_indicators.py  trend_indicators.py  volatility_indicators.py  volume_indicators.py
src/data_collector/polygon_data/: __init__.py  client.py  data_fetcher.py  data_pipeline.py  data_storage.py  data_validator.py  dividend_pipeline.py  example_usage.py  rate_limiter.py
src/data_collector/polygon_fundamentals/: __init__.py  cache_manager.py  client.py  config.py  data_models.py  data_validator.py  db_pool.py  monitor.py  optimized_collector.py  optimized_processor.py  run_fundamental_collection.py  run_fundamental_pipeline.py  setup_database.py
src/data_collector/polygon_fundamentals_v2/: README.md  __init__.py  collector_service.py  extractor.py  fundamental_pipeline.py  parser.py  processor.py  raw_client.py  repository.py  run_pipeline.py  validator_v2.py
src/data_collector/polygon_news/: __init__.py  models.py  news_client.py  news_pipeline.py  processor.py  storage.py  ticker_integration.py  validator.py
src/data_utils/: __init__.py  feature_engineering.py  memory_tracker.py  ml_data_pipeline.py  ml_feature_loader.py  sequential_data_loader.py  stationarity_transformer.py  target_engineering.py
src/database/: __init__.py  connection.py  db_utils.py  fundamental_models.py
src/feature_engineering/: __init__.py  config.py  data_loader.py
src/feature_engineering/fundamental_indicators/: __init__.py  base.py  fundamental_pipeline.py  growth_metrics.py  ratios.py  scoring_systems.py  sector_analysis.py
src/feature_engineering/technical_indicators/: __init__.py  base.py  consolidate_features.py  consolidated_storage.py  feature_calculator.py  feature_storage.py  indicator_pipeline.py  momentum_indicators.py  trend_indicators.py  volatility_indicators.py  volume_indicators.py
src/models/: __init__.py  base_model.py
src/models/automl/: autogluen_load_model.py  autogluon_model.py  autogluon_trainer.py  shap_select_feature_selector.py
src/models/common/: dataloader_utils.py  training_data_prep.py
src/models/evaluation/: __init__.py  metrics.py  threshold_evaluator.py  threshold_policy.py
src/models/feature_selection/: autoencoder.py  io.py  pipeline.py  shap_selector.py
src/models/gradient_boosting/: __init__.py  lightgbm_model.py  random_forest_model.py  xgboost_model.py
src/models/predictors/: autogluon_predictor.py  base_predictor.py  lightgbm_all_run_predictor.py  lightgbm_predictor.py  lstm_predictor.py  mlp_all_run_predictor.py  mlp_predictor.py  realmlp_predictor.py  xgboost_predictor.py
src/models/skforecast/: ensemble_forecaster.py  utils.py
src/models/time_series/: base_pytorch_model.py  lstm_model.py  train_lstm_model.py
src/pipelines/: train_skforecast_ensemble.py
src/tests/: pytest.ini  test_feature_selection_speed.py  test_threshold_optimization.py  test_threshold_policy.py  test_universal_logging.py
src/tests/mlp/: conftest.py  test_mlp_architecture.py  test_mlp_hyperparameter_optimization.py  test_mlp_optimization_scaler.py  test_mlp_predictor_advanced.py  test_mlp_predictor_refactored.py  test_mlp_scaler_implementation.py
src/utils/: __init__.py  architecture_assessment.py  cleaned_data_cache.py  clear_prediction_cache.py  code_quality_analysis.py  credentials.py  data_utils.py  evaluation_orchestrator.py  evaluation_report.py  feature_categories.py  logger.py  memory_efficient.py  mlflow_integration.py  mlflow_utils.py  performance_evaluation.py  reliability_testing.py  retry.py  security_audit.py  security_review.py  serialization.py  validation.py
src/utils/core/: __init__.py  credentials.py  logger.py  (+2 more)
tests/: __init__.py  conftest.py
tests/_fixtures/: __init__.py  conftest.py  db.py  factories.py  fixtures.py  frozen_time.py  helpers.py  remote_api_responses.py
tests/fixtures/: __init__.py  conftest.py  db.py  factories.py  fixtures.py  frozen_time.py  remote_api_responses.py
tests/integration/: test_data_collector_reliability.py
tests/unit/: test_data_validator.py  test_dividend_pipeline.py  test_dividend_transform.py  test_skforecast_ensemble.py  test_validation.py
tests/utils/: __init__.py  test_architecture_assessment.py  test_code_quality_analysis.py  test_evaluation_orchestrator.py
(+165 files in other folders)
