[project]
name = "stockpredictor-v1"
version = "0.1.0"
description = "Advanced stock prediction system with Polygon.io data acquisition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "catboost>=1.2.8",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "great-expectations>=0.18.8",
    "hypothesis>=6",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "lion-pytorch>=0.2.3",
    "logging>=0.4.9.6",
    "mlflow>=2.22.0",
    "newsapi-python>=0.2.7",
    "nltk>=3.9.1",
    "numpy==2.3.0",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pandas-ta>=0.3.14b0",
    "psutil>=6.0.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.3",
    "scikit-learn==1.4.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.2",
    "ta>=0.11.0",
    "textblob>=0.19.0",
    "torch>=2.0.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.0.0",
    "torch-optimizer>=0.3.0",
    "transformers>=4.52.4",
    "vadersentiment>=3.3.2",
    "vulture>=2.14",
    "xgboost>=3.0.2",
    "yfinance>=0.2.61",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "autoflake>=2.3.1",
    "black>=25.1.0",
]

[project.scripts]
stockpredictor = "run_polygon_examples:main"
polygon-test = "test_polygon:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[[tool.uv.index]]
url = "file:///C:/Users/szita.DESKTOP-4G1EVV7/Documents/StockPredictor_V1/pytorch"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.flake8]
max-line-length = 88
