[project]
name = "stockpredictor_v1"
version = "0.1.0"
description = "Advanced stock prediction system with Polygon.io data acquisition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "autogluon-tabular[tabicl]>=1.4.0",
    "autogluon[tabarena]>=1.4.0",
    "bokeh>=3.7.3",
    "fastparquet>=2024.11.0",
    "great-expectations>=0.18.8",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "lion-pytorch>=0.2.3",
    "loguru>=0.7.3",
    "mlflow>=2.22.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "psutil>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.5",
    "pytabkit>=1.6.1",
    "python-dotenv>=1.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "psycopg2>=2.9.10",
    "isort>=6.0.1",
    "mypy>=1.10.0",
    "autoflake>=2.3.1",
    "hypothesis>=6",
    "requests>=2.32.3",
    "ruff>=0.12.11",
    "scikit-learn>=1.4.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.2",
    "ta>=0.11.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "xgboost>=3.0.2",
    "intentgraph>=0.2.2",
    "vulture>=2.14",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--strict-markers --verbose --cov=src --cov-report json:coverage.json --cov-fail-under=70 --timeout=30"
markers = [
    "unit: Unit tests - test individual components in isolation",
    "integration: Integration tests - test multiple components working together",
    "e2e: End-to-end tests - test complete workflows",
    "slow: Tests that take more than 1 second to run",
    "ml: Machine learning specific tests",
    "data: Data processing and validation tests",
    "api: Tests that interact with external APIs (should be mocked)",
    "db: Tests that interact with databases",
    "file: Tests that read/write files",
    "performance: Performance and benchmark tests",
]
