[project]
name = "stockpredictor_v1"
version = "0.1.0"
description = "Advanced stock prediction system with Polygon.io data acquisition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "autoflake>=2.3.1",
    "bokeh>=3.7.3",
    "coverage>=7.10.6",
    "fastparquet>=2024.11.0",
    "fs>=2.4.16",
    "isort>=6.0.1",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "mlflow>=2.22.0",
    "mypy>=1.10.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "polyfactory>=2.22.2",
    "psutil>=6.0.0",
    "psycopg[binary,pool]>=3.2.10",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.5",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "ruff>=0.12.11",
    "scikit-learn>=1.4.0",
    "setuptools>=80.9.0,<81",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.2",
    "ta>=0.11.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision",
    "vulture>=2.14",
    "xgboost>=3.0.2",
    "autogluon",
    "skforecast[full]>=0.18.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]

[tool.ruff]
line-length = 100
unsafe-fixes = true

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.analyze]
direction = "dependencies"

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=src --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml --cov-fail-under=50"
markers = [
    "unit: Unit tests - test individual components in isolation",
    "integration: Integration tests - test multiple components working together",
    "e2e: End-to-end tests - test complete workflows",
    "slow: Tests that take more than 1 second to run",
    "ml: Machine learning specific tests",
    "data: Data processing and validation tests",
    "api: Tests that interact with external APIs (should be mocked)",
    "db: Tests that interact with databases",
    "file: Tests that read/write files",
    "performance: Performance and benchmark tests",
]
